updated links in footer

--- a/folio.html
+++ b/folio.html
@@ -32,6 +32,10 @@
         alt=""
       />
     </h1>
-    <footer>this page was coded by Alesia Shope</footer>
+    <footer>
+      This page was coded by
+      <a href="https://github.com/avsangel"> Alesia Shope</a> and open sourced
+      on <a href="https://github.com/avsangel?tab=repositories"> github</a>
+    </footer>
   </body>
 </html>
