--- a/folio.html
+++ b/folio.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Portfolio</title>
     <style>
+      body {
+        background: radial-gradient(
+          328px at 2.9% 15%,
+          rgb(191, 224, 251) 0%,
+          rgb(232, 233, 251) 25.8%,
+          rgb(252, 239, 250) 50.8%,
+          rgb(234, 251, 251) 77.6%,
+          rgb(240, 251, 244) 100.7%
+        );
+      }
       h1 {
         color: blue;
         text-align: center;
@@ -22,6 +32,7 @@
       }
       p {
         text-align: center;
+        font-size: 16px;
       }
       footer {
         text-align: center;
@@ -51,17 +62,64 @@
         display: block;
         line-height: 30px;
       }
+      .listhead {
+        font-weight: 900;
+        font-size: 20px;
+        color: blue;
+      }
+      .contact1 {
+        margin: 0 auto;
+        width: 30px;
+        height: 30px;
+        border-radius: 10px;
+      }
+      .contact2 {
+        margin: 0 auto;
+        width: 30px;
+        height: 30px;
+        border-radius: 10px;
+      }
+      button {
+        border-radius: 5px;
+        background-color: aliceblue;
+      }
+      .launch {
+        border-radius: 10px;
+        font-size: 15px;
+        color: aquamarine;
+      }
     </style>
   </head>
   <div class="container">
-    <header>
-      <button>home</button> <button>about</button> <button>projects</button>
-      <button>contact</button>
-    </header>
     <body>
       <h1>
         Alesia Shope <br />
-        Jr. Web Devloper
+        Web Devloper
+        <br />
+
+        <button>
+          <a href="https://www.linkedin.com/in/alesiashope711/" target="_blank">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/810/original/6WtDIesg_400x400.png?1704056245"
+              alt=""
+              class="contact1"
+          /></a>
+        </button>
+        <button>
+          <a href="https://github.com/avsangel" target="_blank">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/813/original/Unknown.png?1704057579"
+              alt=""
+              class="contact2"
+          /></a>
+        </button>
+        <button>
+          <a
+            href="https://www.canva.com/design/DAF4IoV89nc/view"
+            target="_blank"
+            >Resume</a
+          >
+        </button>
         <img
           class="me"
           src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/107/846/original/Untitled_design-4.png?1703044959"
@@ -70,49 +128,88 @@
       </h1>
       <hr />
       <p>
-        Single mom trying to turn this dream of coding into a reality. my
-        hobbies include crafting, gaming, biking, reading, and watching hockey
+        Single mom turning this dream of coding into a reality. My hobbies
+        outside of coding include
+        <a href="http://www.turacocreations.com" target="_blank">crafting</a>,
+        gaming, biking,
+        <a
+          href="https://www.goodreads.com/user/show/13035512-alesia"
+          target="_blank"
+        >
+          reading</a
+        >, and watching hockey
       </p>
       <hr />
       <ul>
-        projects
+        <span class="listhead"> projects</span>
+        <br />
+        <br />
         <li>
-          Tamales
+          <span class="listhead">Tamales</span>
+          <p>To build this site I used HTML, CSS, and Javascript.</p>
           <img
             class="page1"
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/736/original/Screenshot_2023-12-30_at_4.00.14_PM.png?1703973641"
             alt=""
           />
-          <button>
-            <a href="https://mylovetamales.netlify.app">launch project</a>
+          <br />
+          <button class="launch">
+            <a href="https://mylovetamales.netlify.app" target="_blank"
+              >launch project</a
+            >
           </button>
+          <br />
         </li>
+        <br />
         <li>
-          crafting
+          <span class="listhead">Crafting</span>
+
+          <p>
+            To build this site I used HTML, CSS, CSS grid, transitions, and
+            Javascript.
+          </p>
           <img
             class="page2"
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/734/original/Screenshot_2023-12-30_at_3.53.20_PM.png?1703973229"
             alt=""
           />
-          <button>
-            <a href="https://my-crafts.netlify.app">launch project</a>
+          <br />
+          <button class="launch">
+            <a href="https://my-crafts.netlify.app" target="_blank"
+              >launch project</a
+            >
           </button>
+          <br />
         </li>
+        <br />
         <li>
-          weather page
+          <span class="listhead">Weather page</span>
+          <p>
+            To build this site I used HTML, CSS, and Javascript. I also used an
+            integrated weather API. On load this site has current info for
+            Lincoln, Ne but once you enter a city the page changes based on that
+            citys current information.
+          </p>
           <img
             class="page3"
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/730/original/Screenshot_2023-12-17_at_8.34.24_PM.png?1703971126"
             alt=""
-          /><button>
-            <a href="https://weeksevenproject.netlify.app">launch project</a>
+          />
+          <br />
+          <button class="launch">
+            <a href="https://weeksevenproject.netlify.app" target="_blank"
+              >launch project</a
+            >
           </button>
         </li>
       </ul>
       <footer>
         This page was coded by
-        <a href="https://github.com/avsangel"> Alesia Shope</a> and open sourced
-        on <a href="https://github.com/avsangel?tab=repositories"> github</a>
+        <a href="https://github.com/avsangel" target="_blank"> Alesia Shope</a>
+        and open sourced on
+        <a href="https://github.com/avsangel?tab=repositories" target="_blank">
+          github</a
+        >
       </footer>
     </body>
   </div>
